@@ -1,9 +1,9 @@
-en-US, 22/22, 100%, missing 0
-de-DE, 0/22, 0%, missing 22
-it-IT, 0/22, 0%, missing 22
-fr-FR, 0/22, 0%, missing 22
-es-ES, 0/22, 0%, missing 22
-ru-RU, 22/22, 100%, missing 0
-zh-Hans, 0/22, 0%, missing 22
-pt-BR, 0/22, 0%, missing 22
-pl-PL, 0/22, 0%, missing 22
+en-US, 21/21, 100%, missing 0
+de-DE, 0/21, 0%, missing 21
+it-IT, 21/21, 100%, missing 0
+fr-FR, 0/21, 0%, missing 21
+es-ES, 0/21, 0%, missing 21
+ru-RU, 21/21, 100%, missing 0
+zh-Hans, 0/21, 0%, missing 21
+pt-BR, 0/21, 0%, missing 21
+pl-PL, 0/21, 0%, missing 21
