@@ -53,8 +53,6 @@ Mods: {
 					Tooltip: Костры тоже будут попадать под влияние данной модификации. Всё, что относится к факелам, будет действовать и на костры
 				}
 			}
-
-			Common.AcceptClientChanges: Только владелец этого мира может менять настройки! Смените настройки в одиночной игре.
 		}
 
 		RecipeGroups: {
