@@ -31,3 +31,4 @@ Localization:
 If you want to add support for different languages, you are welcome to contribute localizations here: https://github.com/direwolf420/TorchGodTweaks
 List of localization contributors:
 * Russian: GodHybrid
+* Italian: Sea Noodle
