@@ -31,3 +31,4 @@ Check the config for more details ([u]all options are enabled by default[/u]).
 If you want to add support for different languages, you are welcome to contribute localizations here: [b][url=https://github.com/direwolf420/TorchGodTweaks]GitHub[/url][/b]
 List of localization contributors:
 * Russian: [b]GodHybrid[/b]
+* Italian: [b]Sea Noodle[/b]
