@@ -1,1 +1,4 @@
-* Added russian localization, thanks GodHybrid!
+v{ModVersion} has been published to {tMLBuildPurpose} tML v{tMLVersion}.
+
+* Disabled shimmer decrafting for the Torch God's Favor recipe
+* Added italian localization, thanks Sea Noodle!
